# Tripple

./: README.md  pyproject.toml
controls/: categories.json  global.json  predicates.json
controls/domains/: biology__anatomy.json  biology__bioinformatics.json  biology__biophysics.json  biology__botany.json  biology__cell_biology.json  biology__developmental_biology.json  biology__ecology.json  biology__evolutionary_biology.json  biology__genetics.json  biology__genomics.json  biology__immunology.json  biology__metabolomics.json  biology__microbiology.json  biology__molecular_biology.json  biology__mycology.json  biology__neuroscience.json  biology__pharmacology.json  biology__physiology.json  biology__proteomics.json  biology__structural_biology.json  biology__systems_biology.json  biology__toxicology.json  biology__virology.json  biology__zoology.json  chemistry__analytical_chemistry.json  chemistry__biochemistry.json  chemistry__catalysis.json  chemistry__crystallography.json  chemistry__electrochemistry.json  chemistry__inorganic_chemistry.json  chemistry__kinetics.json  chemistry__materials_chemistry.json  chemistry__nanochemistry.json  chemistry__organic_chemistry.json  chemistry__physical_chemistry.json  chemistry__polymer_chemistry.json  chemistry__quantum_chemistry.json  chemistry__spectroscopy.json  chemistry__surface_chemistry.json  chemistry__thermodynamics.json  (+232 more)
controls/policies/: red_flags.json
controls/schema/: triplet.schema.json
prompts/: codex_task.md
src/meshtriplets/: cli.py  controls.py  extractor.py  models.py  store.py  util.py
