[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "meshtriplets"
version = "1.1.0"
description = "Triplet seeding toolkit with Codex catalog"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "MeshTriplets"}]
[project.scripts]
meshtriplets = "meshtriplets.cli:main"
